# EOR_inpy

./: .gitignore  AFKI-EOR.spec  AGENTS.md  README.md  constraints-windows-legacy.txt  eor_control.spec  pyproject.toml
.github/workflows/: ci.yml  windows-build.yml
config/AFKI/: EORControl.ini
docs/: DASNET_COMMANDS.md  architecture.md  drivers_readme.txt  hardware.md  meeting-note-2026-07-13-implementation-plan.md  open-questions.md  requirements.md  safety.md  target-host.md  testing.md
scripts/: build_windows.ps1
src/eor_control/: __init__.py  __main__.py  application.py  calibration.py  control.py  control_loop.py  dasnet.py  data_management.py  device_testing.py  devices.py  diagnostics.py  domain.py  hardware.py  isco.py  measurement.py  ni.py  ni_diagnostic.py  preflight.py  projects.py  pump_control.py  pump_telemetry.py  runtime.py  safety.py  signal_filter.py  simulators.py  storage.py  terminal.py  timezone.py  ui.py
tests/: test_application.py  test_calibration.py  test_control.py  test_control_loop.py  test_dasnet.py  test_data_management.py  test_device_testing.py  test_diagnostics.py  test_hardware.py  test_isco.py  test_measurement.py  test_ni.py  test_ni_diagnostic.py  test_preflight.py  test_projects.py  test_pump_control.py  test_pump_telemetry.py  test_runtime.py  test_safety.py  test_signal_filter.py  test_simulators.py  test_storage.py  test_terminal.py  test_timezone.py  test_ui.py
