[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "afki-eor-control"
version = "0.1.0"
description = "AFKI EOR measurement control and data acquisition application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
ui = ["PySide6>=6.7", "pyqtgraph>=0.13.7"]
hardware = ["nidaqmx>=1.0", "pyserial>=3.5"]
export = ["openpyxl>=3.1"]
dev = ["mypy>=1.10", "pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.5"]

[project.scripts]
eor-control = "eor_control.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/eor_control"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

